--- a/FavoriteCatsRN/package.json
+++ b/FavoriteCatsRN/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "5.2.4",
+    "@react-navigation/native": "5.1.4",
     "@react-navigation/stack": "5.2.8",
     "expo": "36.0.0",
     "expo-font": "8.0.0",
+    "expo-linear-gradient": "8.0.0",
     "native-base": "2.13.8",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -20,8 +22,7 @@
     "react-native-gesture-handler": "1.5.0",
     "react-native-reanimated": "1.4.0",
     "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "expo-linear-gradient": "~8.0.0"
+    "react-native-screens": "2.0.0-alpha.12"
   },
   "devDependencies": {
     "@types/react": "16.9.0",
