--- a/play-with-expo-managed/package.json
+++ b/play-with-expo-managed/package.json
@@ -35,7 +35,8 @@
     "react-native-web": "0.17.1",
     "expo-updates": "~0.10.13",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0"
+    "react-native-reanimated": "~2.2.0",
+    "expo-barcode-scanner": "~11.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
