--- a/RnCliExampleNfcAndQrApp/package.json
+++ b/RnCliExampleNfcAndQrApp/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^9.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
@@ -41,6 +42,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|react-native-nfc-manager)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
