--- a/RnCliExampleNfcAndQrApp/package.json
+++ b/RnCliExampleNfcAndQrApp/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-gesture-handler": "^2.1.0",
     "react-native-nfc-manager": "^3.11.1",
+    "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1"
   },
@@ -52,6 +54,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest/setup.ts"
     ]
   }
 }
