--- a/play-with-expo-managed/package.json
+++ b/play-with-expo-managed/package.json
@@ -17,26 +17,28 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.7.0",
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
+    "expo-barcode-scanner": "~11.1.2",
     "expo-constants": "~12.1.3",
     "expo-dev-client": "^0.6.3",
     "expo-font": "~10.0.3",
     "expo-linking": "~2.4.2",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
     "expo-web-browser": "~10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-nfc-manager": "^3.11.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "expo-updates": "~0.10.13",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "expo-barcode-scanner": "~11.1.2"
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
