--- a/StartReactNativeAnimationsCourse/package.json
+++ b/StartReactNativeAnimationsCourse/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "4.0.0",
     "jest": "^29.2.1",
     "jest-expo": "49.0.0",
@@ -123,6 +124,7 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "extends": [
+      "plugin:react-hooks/recommended",
       "plugin:@typescript-eslint/recommended",
       "plugin:react/recommended",
       "plugin:react-native/all",
@@ -130,6 +132,7 @@
       "prettier"
     ],
     "plugins": [
+      "react-hooks",
       "@typescript-eslint",
       "react",
       "react-native"
