--- a/StartReactNativeAnimationsCourse/package.json
+++ b/StartReactNativeAnimationsCourse/package.json
@@ -42,6 +42,7 @@
     "expo": "^49.0.20",
     "expo-application": "~5.4.0",
     "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.12",
     "expo-font": "~11.6.0",
     "expo-linking": "~5.0.2",
     "expo-localization": "~14.5.0",
@@ -59,8 +60,8 @@
     "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-dev-client": "~2.4.12"
+    "react-native-svg": "^14.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
