[StartReactNativeAnimationsCourse] Add graph bezier curve interaction

--- a/StartReactNativeAnimationsCourse/package.json
+++ b/StartReactNativeAnimationsCourse/package.json
@@ -38,6 +38,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "^1.6.1",
     "apisauce": "3.0.1",
+    "d3-shape": "^3.2.0",
     "date-fns": "^2.30.0",
     "expo": "^49.0.20",
     "expo-application": "~5.4.0",
@@ -73,6 +74,7 @@
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@types/d3-shape": "^3.1.6",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "^29.2.1",
     "@types/react": "~18.2.14",
