[ExpoWhiteLabelExperiment] Fix maestro test

--- a/ExpoWhiteLabelExperiment/.maestro/FavoritePodcast.yaml
+++ b/ExpoWhiteLabelExperiment/.maestro/FavoritePodcast.yaml
@@ -2,7 +2,7 @@
 
 appId: com.expowhitelabelexperiment
 env:
-  TITLE: "RNR 257 - META RESPONDS! How can we improve React Native, part 2"
+  TITLE: "RNR 277 - Expo Launch Party"
   FAVORITES_TEXT: "Switch on to only show favorites"
 
 ---
