--- a/ExpoWhiteLabelExperiment/package.json
+++ b/ExpoWhiteLabelExperiment/package.json
@@ -37,6 +37,9 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "^1.6.1",
+    "@tanstack/query-async-storage-persister": "^5.13.4",
+    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query-persist-client": "^5.13.4",
     "apisauce": "3.0.1",
     "date-fns": "^2.30.0",
     "expo": "^49.0.21",
