--- a/ExpoWhiteLabelExperiment/.maestro/FavoritePodcast.yaml
+++ b/ExpoWhiteLabelExperiment/.maestro/FavoritePodcast.yaml
@@ -1,6 +1,6 @@
 # flow: run the login flow and then navigate to the demo podcast list screen, favorite a podcast, and then switch the list to only be favorites.
 
-appId: com.expowhitelabelexperiment
+appId: com.spiderpods
 env:
   TITLE: "RNR 277 - Expo Launch Party"
   FAVORITES_TEXT: "Switch on to only show favorites"
@@ -8,7 +8,7 @@ env:
 ---
 - runFlow: Login.yaml
 - tapOn: "Podcast"
-- assertVisible: "React Native Radio episodes"
+- assertVisible: "SpiderPods Episodes"
 - tapOn:
     text: ${FAVORITES_TEXT}
 - assertVisible: "This looks a bit empty"
