--- a/TapToPayExperiment/MobileApp/app.json
+++ b/TapToPayExperiment/MobileApp/app.json
@@ -62,7 +62,10 @@
             "newArchEnabled": false
           },
           "android": {
-            "newArchEnabled": false
+            "newArchEnabled": false,
+            "minSdkVersion": 26,
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34
           }
         }
       ],
