--- a/TapToPayExperiment/MobileApp/ci/deploy-ios.yml
+++ b/TapToPayExperiment/MobileApp/ci/deploy-ios.yml
@@ -15,10 +15,13 @@ jobs:
   steps:
   - checkout: self
 
+  - script: git checkout $(Build.SourceBranchName)
+    displayName: 'Checkout release branch'
+
   - task: UseNode@1
     inputs:
       version: '20.x'
     displayName: 'Install Node.js'
 
-  - script: pwd
+  - script: ls
     displayName: 'Check working directory'
