--- a/TapToPayExperiment/MobileApp/ci/deploy-ios.yml
+++ b/TapToPayExperiment/MobileApp/ci/deploy-ios.yml
@@ -15,7 +15,7 @@ jobs:
   steps:
   - checkout: self
 
-  - script: git switch $(Build.SourceBranchName)
+  - script: git switch $(Build.SourceBranch)
     displayName: 'Checkout release branch'
 
   - task: UseNode@1
