--- a/TapToPayExperiment/MobileApp/package.json
+++ b/TapToPayExperiment/MobileApp/package.json
@@ -95,6 +95,7 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-native": "4.0.0",
+    "handlebars": "^4.7.8",
     "jest": "^29.2.1",
     "jest-expo": "49.0.0",
     "patch-package": "6.4.7",
