[TapToPayExperiment] Setting up Fastlane for iOS

--- a/TapToPayExperiment/MobileApp/ci/deploy-ios.yml
+++ b/TapToPayExperiment/MobileApp/ci/deploy-ios.yml
@@ -35,7 +35,7 @@ jobs:
 
       - task: UseRubyVersion@0
         inputs:
-          versionSpec: "3.2.2"
+          versionSpec: "3.x"
 
       - script: bundle install
         workingDirectory: TapToPayExperiment/MobileApp/ios
