--- a/TapToPayExperiment/MobileApp/ci/deploy-android.yml
+++ b/TapToPayExperiment/MobileApp/ci/deploy-android.yml
@@ -14,6 +14,8 @@ jobs:
     displayName: Deploy Android
     steps:
       - checkout: self
+        persistCredentials: true
+        clean: true
 
       - script: |
           git fetch --all
@@ -72,7 +74,7 @@ jobs:
           git checkout main
           npm run bumpVersions -- android
           git add versions.json
-          git commit -m "Bump Android version" -m "[skip ci]"
+          git commit -m "[TapToPayExperiment] Bump Android version" -m "[skip ci]"
           git pull --rebase
           git push
         workingDirectory: TapToPayExperiment/MobileApp
