--- a/ShopifyIntegrationExperiment/package.json
+++ b/ShopifyIntegrationExperiment/package.json
@@ -64,7 +64,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "shopify-buy": "^2.21.1",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
